src/objects/CRM2_Concern_Id__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Table for CRM2 Concern Id</description>
    <fields>
        <fullName>LMP_Concern__c</fullName>
        <description>This field is used to capture the Concern of the case.</description>
        <label>Concern</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMP_Question__c</fullName>
        <description>This field is used to capture the Question linked to a Case record.</description>
        <label>Question</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMP_Service__c</fullName>
        <description>This field is used to capture the Service linked to a Case record.</description>
        <label>Service</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>CRM2 Concern Id</label>
</CustomObject>